# project-book

./: README.md  index.html  package.json  pnpm-lock.yaml  wayland.nu
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/handlers/: commands.rs  error.rs  mod.rs
src-tauri/src/plex/: client.rs  error.rs  mod.rs  plex.rs  resources.rs
src-tauri/src/plex/resources/: album.rs  connections.rs  library.rs  mod.rs
src-tauri/src/state/: books.rs  error.rs  mod.rs  settings.rs
src-tauri/templates/: home.html  library.html  mini-player.html  pin.html  player.html  plexSignedIn.html  settings.html
src-tauri/templates/settings/: pin.html  state.html
src-tauri/templates/settings/plex/: library.html  pin.html  server.html  signed_in.html  signed_out.html
